objects/ASI_CRM_Bill_To__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>ASI_CRM_Pay_To__c</referenceTo>
        <relationshipLabel>Bill To</relationshipLabel>
        <relationshipName>Bill_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bill_To_Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bill To Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP Direct Sales Bill To</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Sold To</relationshipLabel>
        <relationshipName>Sold_To</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Bill To</relationshipLabel>
        <relationshipName>Bill_To</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Address_English__c</fullName>
        <formula>ASI_CRM_Bill_To_Customer__r.ASI_CRM_JP_Address_English__c</formula>
        <label>Address (English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Address__c</fullName>
        <formula>ASI_CRM_Bill_To_Customer__r.ASI_CRM_CN_Address__c</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Customer_English_Name_Kanji__c</fullName>
        <formula>ASI_CRM_Bill_To_Customer__r.ASI_CRM_VN_EnglishName__c</formula>
        <label>English Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Customer_Name_Kanji__c</fullName>
        <formula>ASI_CRM_Bill_To_Customer__r.ASI_CRM_Customer_Name_Kanji__c</formula>
        <label>Customer Name (Kanji)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Customer_Name_Katakana__c</fullName>
        <formula>ASI_CRM_Bill_To_Customer__r.ASI_CRM_Customer_Name_Katakana__c</formula>
        <label>Customer Name (Katakana)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Phone_Number__c</fullName>
        <formula>ASI_CRM_Bill_To_Customer__r.ASI_CRM_CN_Phone_Number__c</formula>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Primary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Bill To</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Bill To</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill To</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>